--- a/src/fonts/fonts.css
+++ b/src/fonts/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "cute";
     font-weight: normal;
-    src: url("./img/cute.ttf") format("truetype");
+    src: url("/img/cute.ttf") format("truetype");
   }
   
